# agents-service

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: ci-settings.yml
.github/workflows/: ci-main.yml  default.yml  docs.yml
architecture/: index.html
docs/: getting-start.md  summary.md
examples/scrapy-integration/: README.md  pyproject.toml
examples/scrapy-integration/src/scrapy_integration/: scrapy.cfg
examples/scrapy-integration/src/scrapy_integration/scrapy_agent/: extensions.py  items.py  middlewares.py  pipelines.py  settings.py
examples/scrapy-integration/src/scrapy_integration/scrapy_agent/spiders/: agent_spider.py
getting-start/: index.html
reference/: index.html
reference/docs/: index.html
reference/docs/architecture/: index.html
reference/docs/getting-start/: index.html
reference/docs/summary/: index.html
reference/examples/scrapy-integration/: index.html
reference/src/: index.html
reference/src/server/main./: code_referencemd
reference/src/server/signal_handler./: code_referencemd
scripts/: branch-check.sh  gen_doc_stubs.py
search/: search_index.json
src/: README.md
src/server/: main.py  signal_handler.py
summary/: index.html
usage-examples/: index.html
