[project]
name = "agents-service"
version = "0.1.0"
description = "An agentic microservice using LangGraph"
authors = [{name = "Fabio Luiz Meireles Caffarello", email = "fabio.caffarello@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.4",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.6.5",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-swagger-ui-tag>=0.6.11",
    "mkdocstrings>=0.28.2",
    "mkdocstrings-python>=1.16.2",
    "plantuml-markdown>=3.11.1",
]
