[project]
name = "agents-service"
version = "0.1.0"
description = "An agentic microservice using LangGraph"
authors = [{name = "Fabio Luiz Meireles Caffarello", email = "fabio.caffarello@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logger",
    "cliargs",
    "config"
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
logger = { workspace = true }
cliargs = { workspace = true }
config = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[project.scripts]
main = "server.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "pytest-cov>=6.0.0",
    "pydoclint>=0.6.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.4",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.6.5",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-swagger-ui-tag>=0.6.11",
    "mkdocstrings>=0.28.2",
    "mkdocstrings-python>=1.16.2",
    "plantuml-markdown>=3.11.1",
    "toml>=0.10.2",
]
labs = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
